--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silk",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "silk framework for developers",
   "main": "index.js",
   "scripts": {
@@ -17,11 +17,13 @@
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.2",
-    "normalize-css": "^2.3.1",
+    "normalize.css": "^6.0.0",
     "sass-loader": "^6.0.3",
     "silk-accordion": "nickrigby/silk-accordion",
     "silk-core": "nickrigby/silk-core",
     "silk-grid": "nickrigby/silk-grid",
+    "silk-nav": "nickrigby/silk-nav",
+    "silk-offcanvas": "nickrigby/silk-offcanvas",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
