--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "webpack-dev-server --open",
-    "build": "webpack -p"
+    "build": "NODE_ENV=production webpack -p"
   },
   "author": {
     "name": "Nick Rigby",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "node-sass": "^4.5.2",
     "normalize.css": "^6.0.0",
     "sass-loader": "^6.0.3",
@@ -27,6 +28,7 @@
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
+    "url-loader": "^0.5.8",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
