--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "silk",
+  "name": "silc",
   "version": "0.1.0",
-  "description": "silk framework for developers",
+  "description": "simple intutive library of components (silc) for developers",
   "main": "index.js",
   "scripts": {
     "serve": "webpack-dev-server --open",
@@ -20,11 +20,11 @@
     "node-sass": "^4.5.2",
     "normalize.css": "^6.0.0",
     "sass-loader": "^6.0.3",
-    "silk-accordion": "nickrigby/silk-accordion",
-    "silk-core": "nickrigby/silk-core",
-    "silk-grid": "nickrigby/silk-grid",
-    "silk-nav": "nickrigby/silk-nav",
-    "silk-offcanvas": "nickrigby/silk-offcanvas",
+    "silc-accordion": "nickrigby/silc-accordion",
+    "silc-core": "nickrigby/silc-core",
+    "silc-grid": "nickrigby/silc-grid",
+    "silc-nav": "nickrigby/silc-nav",
+    "silc-offcanvas": "nickrigby/silc-offcanvas",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
