--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "node-sass": "^4.5.2",
     "normalize.css": "^6.0.0",
     "sass-loader": "^6.0.3",
-    "silc-accordion": "nickrigby/silc-accordion",
-    "silc-core": "nickrigby/silc-core",
-    "silc-grid": "nickrigby/silc-grid",
-    "silc-nav": "nickrigby/silc-nav",
-    "silc-offcanvas": "nickrigby/silc-offcanvas",
+    "silc-accordion": "^0.5.1",
+    "silc-core": "^0.2.0",
+    "silc-grid": "^0.2.0",
+    "silc-nav": "^0.2.0",
+    "silc-offcanvas": "^0.3.1",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
