--- a/src/scss/index.scss.sample
+++ b/src/scss/index.scss.sample
@@ -6,3 +6,4 @@
 @import "~silc-grid/src/scss/index";
 @import "~silc-accordion/src/scss/index";
 @import "~silc-nav/src/scss/index";
+@import "~silc-offcanvas/src/scss/index";
