--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nickrigby/silc"
   }
 }
