Add silc utilities library

--- a/src/scss/index.scss.sample
+++ b/src/scss/index.scss.sample
@@ -7,3 +7,4 @@
 @import "~silc-accordion/src/scss/index";
 @import "~silc-nav/src/scss/index";
 @import "~silc-offcanvas/src/scss/index";
+@import "~silc-utilities/src/scss/index";
