--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silc",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Simple, Intutive, Library of Components for Web Developers",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "silc-grid": "^0.2.0",
     "silc-nav": "^0.2.0",
     "silc-offcanvas": "^0.3.1",
+    "silc-utilities": "^0.0.1",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
