--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.2",
     "normalize.css": "^6.0.0",
+    "postcss-loader": "^2.0.5",
     "sass-loader": "^6.0.3",
     "silc-accordion": "^0.5.8",
     "silc-core": "^0.4.0",
