--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "handlebars-loader": "^1.6.0",
+    "html-loader": "^0.5.1",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.2",
     "normalize.css": "^6.0.0",
     "postcss-loader": "^2.0.5",
