--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "serve": "NODE_ENV=development webpack-dev-server --open",
     "watch": "webpack --watch",
-    "build:staging": "NODE_ENV=staging concurrently --kill-others-on-fail \"webpack -p\" \"fractal build\"",
-    "build:production": "NODE_ENV=production concurrently --kill-others-on-fail \"webpack -p\" \"fractal build\"",
-    "fractal": "concurrently --kill-others-on-fail \"npm run watch\" \"fractal start --sync\""
+    "build:staging": "NODE_ENV=staging webpack -p",
+    "build:production": "NODE_ENV=production webpack -p",
+    "fractal": "concurrently --kill-others-on-fail \"npm run watch\" \"fractal start --sync\"",
+    "fractal:build": "fractal build"
   },
   "author": {
     "name": "Nick Rigby",
