--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silc",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "Simple, Intutive, Library of Components for Web Developers",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,9 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^3.5.0",
     "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.0",
@@ -40,6 +43,9 @@
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
     "url-loader": "^0.5.8",
+    "vue": "^2.5.16",
+    "vue-loader": "^14.2.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
