--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "ajv": "^6.5.2",
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -30,7 +31,7 @@
     "handlebars-loader": "^1.6.0",
     "html-loader": "^0.5.1",
     "node-sass": "^4.5.2",
-    "normalize.css": "^6.0.0",
+    "normalize-scss": "^7.0.1",
     "postcss-loader": "^2.0.5",
     "sass-loader": "^6.0.3",
     "silc-accordion": "^0.9.1",
